# AuthService

./: .gitignore  README.md  alembic.ini  k8s-deployment.yaml  main_grpc.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2024_08_20_1504-fd4ff79ead69_init.py  2024_08_20_1524-2e935b11d7c1_init.py  2024_08_20_1526-e50dae2839e6_create_userdb.py  2024_08_21_1630-1f6df63eebd5_in_userdb_user_name_not_null.py
cfg/: .template.env  сonfig.py
src/data/: auth_service.py
src/dto/: schema.py
src/grpc/auth_service/: auth_server.py  auth_service.proto
src/log/: logger.py
src/model/: userdb.py
tests/: conftest.py
tests/unit/: test_data_preparation.py
tests/unit/src/data/: test_auth_service.py
tests/unit/src/grpc/auth_service/: mock_auth_service.py  test_auth_service.py
